--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "react-goban",
+  "name": "react-simple-goban",
   "version": "0.0.0",
   "private": true,
   "description": "Goban based on godash and react",
   "main": "src/index.jsx",
   "scripts": {
+    "build-example": "browserify -o ./example/simple_goban.js -r ./src/index.jsx:simple-goban",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -18,7 +19,7 @@
     ]
   },
   "dependencies": {
-    "godash": "^0.1.2",
+    "godash": "^0.1.5",
     "react": "^0.13.3"
   },
   "devDependencies": {
