--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "godash": "^0.1.5",
+    "lodash": "^3.10.1",
     "react": "^0.13.3"
   },
   "devDependencies": {
